--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap')
 $pale-blue: hsl(225, 100%, 94%)
+$Bright-blue: hsl(245, 75%, 52%)
+$Very-pale-blue: hsl(225, 100%, 98%)
+$Desaturated-blue: hsl(224, 23%, 55%)
+$Dark-blue: hsl(223, 47%, 23%)
 
 
 body
@@ -15,8 +19,19 @@ body
     @media (min-width: 769px) 
         background: url('../images/pattern-background-desktop.svg') $bg-image-options
 
-
+#summary-card
+    font-family: 'Red Hat Display', sans-serif
+    max-width: 450px
+    .card-body
+        padding: 50px
 
 .plan-summary
     display: grid
     grid-template-columns: min-content auto min-content
+    align-items: center
+    padding: 22px
+    background: $Very-pale-blue
+    *
+        margin: 0
+    div
+        margin-left: 22px
