--- a/css/main.css
+++ b/css/main.css
@@ -20,9 +20,27 @@ body {
 #summary-card {
   font-family: "Red Hat Display", sans-serif;
   max-width: 450px;
+  border: none;
+  border-radius: 1.5rem;
+}
+#summary-card img {
+  border-radius: 1.5rem 1.5rem 0 0;
 }
 #summary-card .card-body {
   padding: 50px;
+  text-align: center;
+}
+#summary-card .card-title {
+  font-weight: 900;
+  font-size: 28px;
+  margin-bottom: 10px;
+}
+#summary-card .card-text {
+  width: 100%;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 0 1rem;
+  color: hsl(224, 23%, 55%);
 }
 
 .plan-summary {
@@ -31,10 +49,49 @@ body {
   align-items: center;
   padding: 22px;
   background: hsl(225, 100%, 98%);
+  border-radius: 1rem;
+  text-align: left;
 }
 .plan-summary * {
   margin: 0;
 }
 .plan-summary div {
   margin-left: 22px;
+}
+.plan-summary div p:first-child {
+  font-weight: 900;
+}
+.plan-summary div p:not(:first-child) {
+  color: hsl(224, 23%, 55%);
+}
+.plan-summary a {
+  color: hsl(245, 75%, 52%);
+  font-weight: 900;
+}
+.plan-summary a:hover {
+  text-decoration: none;
+  color: rgba(66, 52, 226, 0.55);
+}
+
+.proceed {
+  margin: 3ch 0 3ch;
+  border-radius: 1rem;
+  background: hsl(245, 75%, 52%);
+  color: white;
+  padding: 1.5ch;
+  font-weight: bold;
+  box-shadow: 0 16px 8px rgba(102, 90, 231, 0.235);
+}
+.proceed:hover {
+  color: white;
+  background: rgba(66, 52, 226, 0.55);
+}
+
+.cancel {
+  font-weight: bold;
+  text-decoration: none;
+  color: hsl(224, 23%, 55%);
+}
+.cancel:hover {
+  color: black;
 }/*# sourceMappingURL=main.css.map */
