--- a/sass/main.sass
+++ b/sass/main.sass
@@ -66,17 +66,16 @@ body
             color: mix($Bright-blue, hsla(255, 255, 255, 0.1))
 
 .proceed
-    $active-color: $Bright-blue
     margin: 3ch 0 3ch
     border-radius: $border-radius-value
-    background: $active-color
+    background: $Bright-blue
     color: white
     padding: 1.5ch
     font-weight: bold
-    box-shadow: 0 16px 8px mix($active-color, hsla(255, 255, 255, 0.1), 15%)
+    box-shadow: 0 16px 8px mix($Bright-blue, hsla(255, 255, 255, 0.1), 15%)
     &:hover
         color: white
-        background: mix($active-color, hsla(255, 255, 255, 0.1))
+        background: mix($Bright-blue, hsla(255, 255, 255, 0.1))
 
 .cancel
     font-weight: bold
